<resources>
    <string name="app_name">RunningTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_runs">Your Runs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort by:</string>
    <string name="search">Search</string>
    <string name="hint_your_weight">Your weight (kg)</string>
    <string name="hint_your_name">Your name</string>
    <string name="running">Running</string>
    <string name="tracker">Tracker</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="start">Start</string>
    <string name="finish_run">Finish Run</string>
    <string name="total_time">Total Time</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="average_speed">Average Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="_0kcal">0kcal</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0km">0km</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="speed">Speed</string>
    <string name="calories">Calories</string>

    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_records_found">No Records found</string>
</resources>