<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/menu_item_back_arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0km"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalDistanceInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/blue"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00_00"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalTimeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/total_time" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/chart"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0kcal"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalCaloriesInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/blue"
                android:text="@string/total_calories_burned" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/chart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAverageSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0km_h"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAverageSpeedInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/blue"
                android:text="@string/average_speed" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>